# doc-graph-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
docs/: PLAN.md  QUICKSTART.md
src/document_agent/: __init__.py  api.py  cli.py  config.py
src/document_agent/graph/: __init__.py  builder.py  chunker.py  entity.py  relation.py
src/document_agent/llm/: __init__.py  client.py
src/document_agent/parsers/: __init__.py  base.py  image_processor.py  office_parser.py  pdf_parser.py  text_parser.py
src/document_agent/parsers/ocr/: __init__.py  base.py  glm_ocr.py  tesseract_ocr.py  vision_llm_ocr.py
src/document_agent/qa/: __init__.py  generator.py  retriever.py
src/document_agent/storage/: __init__.py  kuzu_store.py  vector_store.py
tests/: __init__.py  test_chunker.py  test_parsers.py
